--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "project-battleship",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
